--- a/Программы на си/Программы на си.vcxproj
+++ b/Программы на си/Программы на си.vcxproj
@@ -19,40 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1.c" />
-    <ClCompile Include="10.c" />
-    <ClCompile Include="11.c" />
-    <ClCompile Include="12.c" />
-    <ClCompile Include="13.c" />
-    <ClCompile Include="14.c" />
-    <ClCompile Include="15.c" />
-    <ClCompile Include="16.c" />
-    <ClCompile Include="17.c" />
-    <ClCompile Include="18.c" />
-    <ClCompile Include="19.c" />
-    <ClCompile Include="2.c" />
-    <ClCompile Include="20.c" />
-    <ClCompile Include="21.c" />
-    <ClCompile Include="22.c" />
-    <ClCompile Include="23.c" />
-    <ClCompile Include="24.c" />
-    <ClCompile Include="25.c" />
-    <ClCompile Include="26.c" />
-    <ClCompile Include="27.c" />
-    <ClCompile Include="28.c" />
-    <ClCompile Include="29.c" />
-    <ClCompile Include="3.c" />
-    <ClCompile Include="30.c" />
-    <ClCompile Include="31.c" />
-    <ClCompile Include="32.c" />
     <ClCompile Include="33.c" />
     <ClCompile Include="34.c" />
     <ClCompile Include="35.c" />
     <ClCompile Include="36.c" />
-    <ClCompile Include="37.c" />
+    <ClCompile Include="37_1.c" />
     <ClCompile Include="38.c" />
     <ClCompile Include="39.c" />
-    <ClCompile Include="4.c" />
     <ClCompile Include="40.c" />
     <ClCompile Include="41.c" />
     <ClCompile Include="42.c" />
@@ -63,7 +36,6 @@
     <ClCompile Include="47.c" />
     <ClCompile Include="48.c" />
     <ClCompile Include="49.c" />
-    <ClCompile Include="5.c" />
     <ClCompile Include="50.c" />
     <ClCompile Include="51.c" />
     <ClCompile Include="52.c" />
@@ -74,15 +46,11 @@
     <ClCompile Include="57.c" />
     <ClCompile Include="58.c" />
     <ClCompile Include="59.c" />
-    <ClCompile Include="6.c" />
     <ClCompile Include="60.c" />
     <ClCompile Include="61.c" />
     <ClCompile Include="62.c" />
     <ClCompile Include="63.c" />
     <ClCompile Include="64.c" />
-    <ClCompile Include="7.c" />
-    <ClCompile Include="8.c" />
-    <ClCompile Include="9.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -186,6 +154,10 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <CompileAs>CompileAsC</CompileAs>
+      <OmitDefaultLibName>false</OmitDefaultLibName>
+      <TranslateIncludes>false</TranslateIncludes>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
