--- a/Программы на си/Программы на си.vcxproj.filters
+++ b/Программы на си/Программы на си.vcxproj.filters
@@ -96,5 +96,13 @@
     <ClCompile Include="64.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="57_input.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="57.txt" />
+    <Text Include="58.txt" />
+    <Text Include="59.txt" />
   </ItemGroup>
 </Project>
