--- a/Программы на си/Программы на си.vcxproj
+++ b/Программы на си/Программы на си.vcxproj
@@ -52,6 +52,8 @@
     <Text Include="57.txt" />
     <Text Include="58.txt" />
     <Text Include="59.txt" />
+    <Text Include="input.txt" />
+    <Text Include="signal.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
